Attach borrowed helper join paths to affected owners